Made tests for create order